<resources>
    <!-- region common -->
    <string name="oz">oz</string>
    <string name="ml">ml</string>
    <string name="ozs">oz\'s</string>
    <string name="mls">ml\'s</string>
    <string name="got_it">GOT IT!</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="go_back">Go Back</string>
    <string name="dismiss">Dismiss</string>
    <string name="warning">Warning!</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="notification_channel">Hydration Reminders</string>
    <string name="notification_channel_description">Get reminders to hydrate when you are below your daily goal</string>
    <string name="notification_title">Hydration reminder</string>
    <string name="notification_content">You\'re at %d%% of your daily goal</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <!-- endregion -->

    <!-- region screen titles -->
    <string name="app_name">Liquid</string>
    <string name="home">Home</string>
    <string name="presets">Presets</string>
    <string name="history">History</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="select_a_drink">Select a Drink</string>
    <string name="drink_amount">Drink Amount</string>
    <string name="edit_preset">Edit Preset</string>
    <!-- endregion -->

    <!-- region home screen -->
    <string name="add_a_drink">Add a Drink</string>
    <!-- endregion -->

    <!-- region drink amount screen -->
    <string name="add">Add Drink</string>
    <!-- endregion -->

    <!-- region welcome screen -->
    <string name="lets_get_started">Lets Get Started!</string>
    <string name="welcome_message">Welcome!\nLiquid is an app focused on keeping you hydrated!</string>
    <!-- endregion -->

    <!-- region email login screen -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome">Welcome</string>
    <string name="failed_login_error_message">Oops, something went wrong! Your email and/or password does not match our records. Please try again!</string>
    <string name="sign_up_prompt">Don\'t have an account?</string>
    <string name="sign_up_cta">Sign me up!</string>
    <!-- endregion -->

    <!-- region email sign up screen -->
    <string name="sign_up">Sign Up</string>
    <string name="email_input_error_msg">Invalid email address</string>
    <string name="password_rules">Password must be a minimum of 8 characters\nPassword must contain one upper case</string>
    <string name="password_generic_error_msg">Invalid Password</string>
    <string name="password_too_long_error_msg">Must be less than 30 characters</string>
    <string name="sign_up_generic_error_message">Oops, something went wrong! We are having trouble creating your account. Please check your email and password and try again.</string>
    <string name="sign_up_user_collision_error_message">Oops, looks like an account already exists with that email address</string>
    <!--endregion-->

    <!-- region user information screen -->
    <string name="user_information_screen_description">Hello! Please Answer a few questions to help us determine the amount of liquids you should be consuming to stay hydrated!</string>
    <string name="weight_prompt">What is your weight?</string>
    <string name="weight_input_hint">lbs</string>
    <string name="create_profile">Create Profile</string>
    <string name="unit_prompt">What is your desired unit of measurement?</string>
    <string name="continue_button_text">Continue</string>
    <string name="weight_error_message">Please enter your weight</string>
    <!-- endregion -->

    <!--region goal display screen -->
    <string name="daily_goal_header">Your Daily Goal is …</string>
    <string name="goal_disclaimer">Note: This is the minimum recommended daily intake of hydrating liquids for most healthy individuals. Hydrate accordingly while sweating and during excersize.\n\nPlease consult your doctor if you have any questions or concerns.\n\nYour daily goal can be adjusted in settings.</string>
    <string name="finish">Finish!</string>
    <string name="data_upload_error_message">Oops, something went wrong!\nThere was an error creating your account. Please try again!</string>
    <!-- endregion -->

    <!-- region forgot password -->
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password_instructions">No worries! Just enter your registered email below for reset instruction.</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <!-- endregion -->

    <!-- region home screen -->
    <string name="your_progress">Your Progress</string>
    <string name="progress">%s of %d %s</string>
    <string name="hydrating_text">Hydrating %s</string>
    <string name="dehydrating_text">Dehydrating %s</string>
    <string name="negative_hydration_image_content_description">Negative hydration image</string>
    <!-- endregion-->

    <!-- region presets -->
    <string name="presets_empty_header">Add Presets to make adding drinks quick and easy!</string>
    <string name="thirsty_camel_content_description">Image of a thirsty camel</string>
    <string name="preset_icon_content_description">Preset Icon</string>
    <!-- endregion -->

    <!-- region add preset -->
    <string name="add_preset_name_hint">Title your Drink!</string>
    <string name="drink_type">Drink Type</string>
    <string name="add_preset">Add Preset</string>
    <string name="new_preset_icon_content_description">icon used for new preset</string>
    <string name="name_error_message">Enter a name</string>
    <string name="type_error_message">Select a drink type</string>
    <string name="amount_error_message">Enter an amount</string>
    <!-- endregion -->

    <!-- region preset type selection -->
    <string name="drink_type_icon_content_description">Drink Type Icon</string>
    <!-- endregion -->

    <!-- region preset icon selection -->
    <string name="choose_an_icon">Choose an Icon</string>
    <!-- endregion -->

    <!-- region edit preset -->
    <string name="delete_preset_warning">Are you sure you want to delete your preset? You cannot undo this process!</string>
    <string name="delete_preset_failure">Uh-oh! Something went wrong with deleting your preset. Please try again.</string>
    <string name="update_preset_failure">Uh-oh! Something went wrong with updating your preset. Please try again.</string>
    <!-- endregion -->

    <!-- region Drink Types -->
    <string name="beer">Beer</string>
    <string name="cocktail">Cocktail</string>
    <string name="coffee">Coffee</string>
    <string name="energy_drink">Energy Drink</string>
    <string name="iced_tea">Iced Tea</string>
    <string name="juice">Juice</string>
    <string name="milk">Milk</string>
    <string name="smoothie">Smoothie</string>
    <string name="soda">Soda</string>
    <string name="sparkling_water">Sparkling Water</string>
    <string name="spirit">Spirit</string>
    <string name="sports_drink">Sports Drink</string>
    <string name="tea">Tea</string>
    <string name="water">Water</string>
    <string name="wine">Wine</string>
    <!-- endregion -->

    <!-- region Settings Screen -->
    <string name="settings_option_arrow">Settings option arrow</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="weight">Weight</string>
    <string name="allow_reminders">Allow Reminders</string>
    <string name="preferred_measurement">Preferred Measurement</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="lbs">lbs</string>
    <!-- endregion -->

    <!-- region Goal Settings -->
    <string name="enter_your_daily_goal">Enter your Daily Goal!</string>
    <string name="fish_content_description">Happy fish</string>
    <!-- endregion -->

    <!-- region select drink -->
    <string name="no_presets_header">Add your most frequently consumed beverage in presets!</string>
    <!-- endregion -->

    <!-- region alcohol warning -->
    <string name="alcohol_warning_description">Alcohol is very dehydrating and as a result, any beverage containing alcohol will have a negative effect on your daily goal.</string>
    <string name="alcohol_warning_calculations_oz">16oz beer = -16oz off your daily goal\n6oz wine = -16oz off your daily goal\n2oz spirit = -16oz off your daily goal</string>
    <string name="alcohol_warning_calculations_ml">473ml beer = -473ml off your daily goal\n175ml wine = -465ml off your daily goal\n60ml spirit = -480ml off your daily goal</string>

    <string name="alcohol_warning_suggestion_oz">Suggestion: To combat the dehydrating effects of alcohol, drink a 16oz glass of water with every alcoholic drink.</string>
    <string name="alcohol_warning_suggestion_ml">Suggestion: To combat the dehydrating effects of alcohol, drink a 473ml glass of water with every alcoholic drink.</string>
    <string name="do_not_show_again">Please do not show me this again.</string>
    <!-- endregion -->

    <!-- region liquid unit settings -->
    <string name="unit_settings_header">What is your preferred measurement?</string>
    <string name="llama_content_description">picture of llama</string>
    <!-- endregion -->

    <!-- region weight settings -->
    <string name="yes_please">YES PLEASE</string>
    <string name="nope">NOPE</string>
    <string name="liquid_drop_description">Image of liquid drop</string>
    <string name="weight_change_goal_prompt">Would you like us to calculate a new goal based on your updated weight?</string>
    <!-- endregion -->

    <!-- region history -->
    <string name="history_empty_header">There is no drink history yet! start by adding your first drink!</string>
    <!-- endregion -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key" translatable="false">liquid-app-prefs</string>
    <string name="question_mark">\?</string>
    <string name="pug_content_description">Image of pug</string>
    <string name="reminder_setup_header">When would you like reminders?</string>
    <string name="to">to</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="every">Every</string>
</resources>
