<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:contentDescription="@string/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/presetsFragment"
        android:contentDescription="@string/presets"
        android:icon="@drawable/ic_local_drink_black_24dp"
        android:title="@string/presets" />
    <item
        android:id="@+id/statsFragment"
        android:contentDescription="@string/stats"
        android:icon="@drawable/ic_timeline_black_24dp"
        android:title="@string/stats" />
    <item
        android:id="@+id/settingsFragment"
        android:contentDescription="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
</menu>