<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.tsquaredapplications.liquid.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_selectDrinkTypeFragment"
            app:destination="@id/selectDrinkTypeFragment" />
    </fragment>
    <fragment
        android:id="@+id/statsFragment"
        android:name="com.tsquaredapplications.liquid.StatsFragment"
        android:label="@string/stats"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.tsquaredapplications.liquid.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/presetsFragment"
        android:name="com.tsquaredapplications.liquid.PresetsFragment"
        android:label="@string/presets"
        tools:layout="@layout/fragment_presets">
        <action
            android:id="@+id/action_presetsFragment_to_addPresetFragment"
            app:destination="@id/addPresetFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectDrinkTypeFragment"
        android:name="com.tsquaredapplications.liquid.SelectDrinkTypeFragment"
        android:label="@string/select_a_drink"
        tools:layout="@layout/fragment_select_drink_type">
        <action
            android:id="@+id/action_selectDrinkTypeFragment_to_drinkAmountFragment"
            app:destination="@id/drinkAmountFragment" />
    </fragment>
    <fragment
        android:id="@+id/drinkAmountFragment"
        android:name="com.tsquaredapplications.liquid.DrinkAmountFragment"
        android:label="@string/drink_amount"
        tools:layout="@layout/fragment_drink_amount">
        <action
            android:id="@+id/action_drinkAmountFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/addPresetFragment"
        android:name="com.tsquaredapplications.liquid.AddPresetFragment"
        android:label="@string/presets"
        tools:layout="@layout/fragment_add_preset">
        <action
            android:id="@+id/action_addPresetFragment_to_addPresetTypeSelectionFragment"
            app:destination="@id/addPresetTypeSelectionFragment" />
        <action
            android:id="@+id/action_addPresetFragment_to_addPresetIconSelectionFragment"
            app:destination="@id/addPresetIconSelectionFragment" />
        <action
            android:id="@+id/action_addPresetFragment_to_presetsFragment"
            app:destination="@id/presetsFragment"
            app:popUpTo="@id/presetsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addPresetTypeSelectionFragment"
        android:name="com.tsquaredapplications.liquid.AddPresetTypeSelectionFragment"
        android:label="@string/presets"
        tools:layout="@layout/fragment_add_preset_type_selection">
        <action
            android:id="@+id/action_addPresetTypeSelectionFragment_to_addPresetFragment"
            app:destination="@id/addPresetFragment"
            app:popUpTo="@id/addPresetFragment" />
    </fragment>
    <fragment
        android:id="@+id/addPresetIconSelectionFragment"
        android:name="com.tsquaredapplications.liquid.AddPresetIconSelectionFragment"
        android:label="fragment_add_preset_icon_selection"
        tools:layout="@layout/fragment_add_preset_icon_selection">
        <action
            android:id="@+id/action_addPresetIconSelectionFragment_to_addPresetFragment"
            app:destination="@id/addPresetFragment"
            app:popUpTo="@id/addPresetFragment" />
    </fragment>
</navigation>